--- a/2.html
+++ b/2.html
@@ -20,9 +20,10 @@
         <li>english</li>
         <li>es</li>
         <hello><h1>kirtan</h1></hello>
-     <h1>
-        anghan
-     </h1>  
+     <p>
+
+        hello my name is kirtan i am in the main branch
+     </p>  
     </ul>
 </body>
 
