add some html tag

--- a/2.html
+++ b/2.html
@@ -22,8 +22,7 @@
         <hello><h1>kirtan</h1></hello>
      <p>
 
-        hello my name is kirtan i am in the main branch
-     </p>  
+        hello my name is kirtan i am in the main branch .      </p>  
     </ul>
 </body>
 
