html new file add

--- a/2.html
+++ b/2.html
@@ -20,6 +20,7 @@
         <li>english</li>
         <li>es</li>
         <hello><h1>kirtan</h1></hello>
+        <p><center>hello</center></p>
      <h1>
         anghan
      </h1>  
