--- a/4.html
+++ b/4.html
@@ -7,6 +7,7 @@
     <title>youtube</title>
 </head>
 <body>
-    <a href="https://www.youtube.com/">hello youtube</a>
+    <a href="https://www.youtube.com/" target="_blank">hello youtube</a>
+    <a href=""></a>
 </body>
 </html>
