new file with css

--- a/3.html
+++ b/3.html
@@ -6,25 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <a href="1.css"></a>
+    <link rel="stylesheet" href="1.css">
 </head>
 
 <body>
-    <ul id="main_nav">
-        <li><a href="#" class="active">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Blog</a></li>
+    <ul  id="main_nav">
+        <li><a href="#" class="active">Home</a></li><br>
+        <li><a href="#">About</a></li><br>
+        <li><a href="#">Portfolio</a></li><br>
+        <li><a href="#">Services</a></li><br>
+        <li><a href="#">Blog</a></li><br>
         <li><a href="#">Contact Us</a></li>
     </ul>
-    <div id="test"> <img src="images/sample.jpg" alt="sample" /> <a href="#" title="test">test</a> <p>some sample text </p> </div>
+    <!-- <div id="test">
+        <img src="images/wallpaper.jpg" width="100" alt="sample"> <a href="#" title="test">test</a>
+        <p>some sample text </p>
+    </div>
 
-    <details>hello
+    <details>
+        hello
         this is details<br>
-        hello 
+        hello
 
-    </details>
+    </details> -->
 </body>
 
 </html>
