make webside home , about etc..

--- a/3.html
+++ b/3.html
@@ -18,8 +18,8 @@
         <li><a href="#">Blog</a></li><br>
         <li><a href="#">Contact Us</a></li>
     </ul>
-    <!-- <div id="test">
-        <img src="images/wallpaper.jpg" width="100" alt="sample"> <a href="#" title="test">test</a>
+    <div id="test">
+        <img src="images/wallpaper.jpg" width="100" alt="sample"> <br><a href="#" title="test">test</a>
         <p>some sample text </p>
     </div>
 
@@ -28,7 +28,7 @@
         this is details<br>
         hello
 
-    </details> -->
+    </details>
 </body>
 
 </html>
