same page linkupdate with use of id and class

--- a/blockchain.html
+++ b/blockchain.html
@@ -12,8 +12,15 @@
 <body>
 
     <h1>Blockchain</h1>
+    <details>
+        <summary>index</summary>
+        <a href="#index"><dd>introduction<br></dd></a>
+        <a href="#Structure & Design"><dd>Structure & Design<br></dd></a>
+       <a href="#blocks"> <dd>Blocks<br></dd></a>
+    </details>
     <hr>
-    <dt>
+
+    <dt id="index">
         <p>From Wikipedia, the free encyclopedia</p>
     </dt>
     <dd>
@@ -29,7 +36,9 @@
         blockchain transactions are irreversible in that, once they are recorded, the data in any given block cannot be
         altered retroactively without altering all subsequent blocks.
         <br>
-        <img align="right" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Bitcoin_Block_Data.svg/580px-Bitcoin_Block_Data.svg.png" alt="this image represented blockchain">
+        <img align="right"
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Bitcoin_Block_Data.svg/580px-Bitcoin_Block_Data.svg.png"
+            alt="this image represented blockchain">
         <mark> Blockchains are typically managed by a peer-to-peer (P2P)</mark> computer network for use as a public
         distributed
         ledger, where nodes collectively adhere to a consensus algorithm protocol to add and validate new transaction
@@ -52,7 +61,7 @@
         permissionless ones.<sup>[4][10]</sup>
     </p>
 
-    <h2>Structure & Design</h2>
+    <h2 id="Structure & Design">Structure & Design</h2>
     <hr>
     <p>A <u>blockchain is a decentralized, distributed, and often public, digital ledger </u> of records called
         blocks that are used to record transactions across many computers so that any involved block cannot be altered
@@ -78,9 +87,39 @@
         <li>data (blocks, transactions)</li>
         <li>application (smart contracts/decentralized applications,if applicable)</li>
     </ul>
-    <h3><b>Blocks</b></h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum suscipit dolorum voluptas aspernatur at rerum labore molestiae natus repudiandae ipsam optio magni odio repellat et blanditiis nam illo enim deserunt reiciendis error, maiores voluptate? Expedita ratione tempore perferendis minima quia saepe magnam animi ipsum reiciendis.
+    <h3 id="blocks"><b>Blocks</b></h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum suscipit dolorum voluptas aspernatur at rerum
+        labore molestiae natus repudiandae ipsam optio magni odio repellat et blanditiis nam illo enim deserunt
+        reiciendis error, maiores voluptate? Expedita ratione tempore perferendis minima quia saepe magnam animi ipsum
+        reiciendis.
     </p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum molestias illum nesciunt eveniet nisi
+        reiciendis deleniti doloribus quia vitae. Non, hic. Perspiciatis quasi officiis beatae animi esse pariatur totam
+        dolorum qui repellat quo maxime fuga illo in doloremque odio est neque, ipsum sint aliquid necessitatibus
+        accusamus? Odit vero blanditiis laboriosam officia sit quod accusamus praesentium temporibus doloribus sunt
+        necessitatibus saepe commodi neque quasi sint consequatur ipsa, perferendis non voluptatum in, architecto eaque
+        asperiores! Earum, debitis unde? Qui illo unde asperiores iure accusamus iste impedit commodi iusto et
+        repudiandae, dolore aperiam porro eius tempore dignissimos rem doloremque voluptas, maiores perspiciatis
+        doloribus! Corrupti nostrum quam adipisci vero quod impedit reiciendis temporibus voluptatem voluptas quo
+        blanditiis placeat provident non veritatis at, rerum quis! Voluptatem nam excepturi quaerat optio quae, ab
+        possimus iusto, facere explicabo omnis vitae! Reprehenderit eius repellendus illo odio, facere deleniti illum
+        ipsam cumque explicabo, magnam maxime in inventore officiis deserunt. Aliquid laboriosam incidunt cupiditate
+        quae! Consequatur at voluptatibus reprehenderit ipsum sint dolores, culpa aliquid alias repudiandae. Distinctio
+        officia minus pariatur nihil! Pariatur sunt earum, sint deleniti blanditiis aliquam quibusdam. Laudantium, vero
+        perspiciatis vitae maiores officia ipsam cupiditate ea asperiores quod, sapiente velit dicta obcaecati molestiae
+        praesentium iusto, quo harum temporibus quia nam deserunt exercitationem aut reiciendis. Tempora, perspiciatis
+        accusamus impedit ratione, aspernatur unde aliquam eaque magni reprehenderit asperiores eligendi dolores magnam
+        vero praesentium quidem nostrum nobis harum totam laborum ducimus repudiandae recusandae numquam earum nisi!
+        Sequi ipsam consequatur quam rerum blanditiis ullam incidunt? Laboriosam blanditiis inventore incidunt maxime?
+        Rem neque quos tempore vel iure vitae, natus minus culpa impedit unde optio laboriosam, reiciendis illo nesciunt
+        est atque quod aliquam nemo ab laudantium. Vero, nam quos a corrupti consequuntur voluptatibus commodi quo
+        tempora ipsam est temporibus odio distinctio, accusantium quis. Dolor officia laboriosam iusto excepturi
+        necessitatibus obcaecati aspernatur perferendis accusantium eveniet?</p>
+
+
+    <br>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio quae laborum similique id quas, aliquid quaerat, quo
+    in magni incidunt ipsam nam autem quidem voluptas ratione porro! Fugit, dolore delectus.
 </body>
 
 </html>
