--- a/blockchain.html
+++ b/blockchain.html
@@ -114,7 +114,7 @@
         Rem neque quos tempore vel iure vitae, natus minus culpa impedit unde optio laboriosam, reiciendis illo nesciunt
         est atque quod aliquam nemo ab laudantium. Vero, nam quos a corrupti consequuntur voluptatibus commodi quo
         tempora ipsam est temporibus odio distinctio, accusantium quis. Dolor officia laboriosam iusto excepturi
-        necessitatibus obcaecati aspernatur perferendis accusantium eveniet?</p>
+        necessitatibus obcaecati aspernatur perferendis accusantium </p>
 
 
     <br>
