all file Organized

--- a/basic html/2.html
+++ b/basic html/2.html
@@ -11,7 +11,7 @@
 <body>
 
     <h2>subject</h2>
-    <ul>
+    <ul type="square">
         <li>maths</li>
         <li>css</li>
         <li>pps</li>
@@ -20,6 +20,16 @@
         <li>english</li>
         <li>es</li>
         <hello><h1>kirtan</h1></hello>
+</ul>
+        <ol type="I" reversed>
+            <li>maths</li>
+            <li>css</li>
+            <li>pps</li>
+            <li>bme</li>
+            <li>bee</li>
+            <li>english</li>
+            <li>es</li>
+            <hello><h1>kirtan</h1></hello>
 
         <p><center>hello</center></p>
      <h1>
