--- a/website main page/index.html
+++ b/website main page/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>webpage</title>
+
    <link rel="stylesheet" href="style.css">
+   <!-- <link rel="icon" href="wallpaper.jpg"> -->
+   <link rel="shortcut icon" sizes="100x100"  href="wallpaper.jpg" type="image/x-icon" >
 </head>
 
 <body>
