--- a/website main page/index.html
+++ b/website main page/index.html
@@ -22,7 +22,7 @@
         <li><a href="#contact">Contact Us</a></li>
     </ul>
     <div id="test">
-        <img src="wallpaper.jpg" width="100" alt="sample"> <br><a href="https://www.github.com//kirtan-anghan/" title="test">test</a>
+        <img src="wallpaper.jpg" width="100" alt="sample"> <br><a id="git"href="https://www.github.com//kirtan-anghan/" title="test">test</a>
         <p>some sample text </p>
    
 
