--- a/basic html/3.html
+++ b/basic html/3.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="wallpaper.jpg">
+    <link rel="icon" <i class="fa fa-github"> <link rel="icon" href=""></i>
     <title>hello </title>
     <!-- <img src="wallpaper.jpg" width="300" alt=""> -->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
     <!-- <style>
         #para {
             /* background-color: blue; */
@@ -18,18 +18,8 @@
             text-align: center;
             colo
         } -->
-<style>
-        span {
-            background-color: blue ;
-            border-radius: 10px;
-            color: aqua;
-            text-align: center;
-            padding: 10px;
-        }
-        .para{
-            text-align: center;
-        }
-    </style>
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -38,9 +28,19 @@
 
             commodi, magni illo
             voluptas at architecto</span>
+
     </p>
-    <hr>
-    <a href="https://www.github.com/kirtan-anghan" target="_blank">This is a link</a>
+    <p class="para2">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus autem labore, libero dicta eum itaque quasi neque ipsam exercitationem accusamus animi nobis voluptatem sint? Fugit sit ipsam vitae beatae esse.
+    </p>
+ 
+    <a href="https://www.github.com/kirtan-anghan" target="_blank" id="hll">This is a link</a>
+    
+         <a href=""> <i class="fa fa-twitter"></i>
+         </a>
+         <a href="https://www.github.com/kirtan-anghan"></a><i class="fa fa-github" style="font-size: 100px ; "></i>
+         <a href="https://www.instagram.com/"><i class="fa fa-instagram"   style="font-size: 100px;"></i></a>
+
 </body>
 
 </html>
