--- a/basic html/3.html
+++ b/basic html/3.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" <i class="fa fa-github"> <link rel="icon" href=""></i>
+    <link rel="icon" <i class="fa fa-github">
+    <link rel="icon" href=""></i>
     <title>hello </title>
     <!-- <img src="wallpaper.jpg" width="300" alt=""> -->
     <link rel="stylesheet" href="style.css">
@@ -19,7 +20,7 @@
             colo
         } -->
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -31,16 +32,44 @@
 
     </p>
     <p class="para2">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus autem labore, libero dicta eum itaque quasi neque ipsam exercitationem accusamus animi nobis voluptatem sint? Fugit sit ipsam vitae beatae esse.
-    </p>
- 
-    <a href="https://www.github.com/kirtan-anghan" target="_blank" id="hll">This is a link</a>
-    
-         <a href=""> <i class="fa fa-twitter"></i>
-         </a>
-         <a href="https://www.github.com/kirtan-anghan"></a><i class="fa fa-github" style="font-size: 100px ; "></i>
-         <a href="https://www.instagram.com/"><i class="fa fa-instagram"   style="font-size: 100px;"></i></a>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus autem labore, libero dicta eum itaque
+        quasi neque ipsam exercitationem accusamus animi nobis voluptatem sint? Fugit sit ipsam vitae beatae esse.
+    </p><br>
 
+    <a href="https://www.github.com/kirtan-anghan" target="_blank" id="hll">This is a link</a><br>
+    <a href="https://www.github.com/kirtan-anghan" class="github" target="_blank" style="color: black ;"> <i
+            class="fa fa-github" style="font-size: 100px ; "></i></a><br>
+    <a href="https://www.instagram.com/kirtan_anghan_2004" class="insta" target="_blank"><i class="fa fa-instagram"
+            style="font-size: 100px;"></i>
+        <div class="ins">instagram</div>
+    </a><br>
+    <form action="input">
+        <label for="name">name</label><input type="text"><br>
+        <input type="color" name="" id=""><br>
+        <input type="button" value="hello"><br>
+        <input type="password"><br>
+        
+
+        <br>
+
+        <input id="M" name="hello" type="radio">
+        <label for="M">Medium</label>
+        <input id="large" name="hello" type="radio">
+        <label for="large">Large</label>
+        <input name="hello" id="elarge" type="radio"> <label for="elarge"> extra Large</label>
+<br>
+        <br>
+        <label for="food">which food you like </label>
+        <select name="food" id="food">
+            <option value="" selected>hello</option>
+            <option value="pizza">pizza</option>
+            <option value="burger">burger</option>
+            <option value="manchuriyan">manchurian</option>
+            <option value="panipuri">panipuri</option>
+        </select>
+
+
+    </form>
 </body>
 
 </html>
