--- a/basic html/3.html
+++ b/basic html/3.html
@@ -37,27 +37,28 @@
     </p><br>
 
     <a href="https://www.github.com/kirtan-anghan" target="_blank" id="hll">This is a link</a><br>
-    <a href="https://www.github.com/kirtan-anghan" class="github" target="_blank" style="color: black ;"> <i
-            class="fa fa-github" style="font-size: 100px ; "></i></a><br>
+    <a href="https://www.github.com/kirtan-anghan" class="github" target="_blank"> 
+        <i class="fa fa-github"
+            style="font-size: 100px ; "></i></a><br>
     <a href="https://www.instagram.com/kirtan_anghan_2004" class="insta" target="_blank"><i class="fa fa-instagram"
             style="font-size: 100px;"></i>
         <div class="ins">instagram</div>
     </a><br>
     <form action="input">
-        <label for="name">name</label><input type="text"><br>
+        <label for="name">name</label><input type="text" placeholder="enter your name"><br>
         <input type="color" name="" id=""><br>
         <input type="button" value="hello"><br>
-        <input type="password"><br>
-        
+        <input type="password" placeholder="enter pass word"><br>
+
 
         <br>
 
         <input id="M" name="hello" type="radio">
-        <label for="M">Medium</label>
+        <label for="M" >Medium</label>
         <input id="large" name="hello" type="radio">
         <label for="large">Large</label>
         <input name="hello" id="elarge" type="radio"> <label for="elarge"> extra Large</label>
-<br>
+        <br>
         <br>
         <label for="food">which food you like </label>
         <select name="food" id="food">
@@ -67,8 +68,20 @@
             <option value="manchuriyan">manchurian</option>
             <option value="panipuri">panipuri</option>
         </select>
+        <br>
+        <label for="cars">which car you have </label>
+        <input   id="cars" list="cars-name">
+        <datalist id="car-name">
+            <option value="audi">  audi </option>
+            <option value="wlok">  wlok </option>
+            <option value="maruti">  maruti </option>
+            <option value="chroma">  chroma </option>
+            <option value="apple">  apple </option>
+        </datalist>
+        <br>
 
-
+        <input type="submit" value="submit">
+        <input type="reset" value="reset">
     </form>
 </body>
 
