--- a/website main page/index.html
+++ b/website main page/index.html
@@ -13,14 +13,19 @@
 </head>
 
 <body>
+    <div class="menu">
+        <div class="menuname">
     <ul type="round" id="main_nav" class="nav-menu" >
-        <li><a href="#home" class="active">Home</a></li><br>
-        <li><a href="#about">About</a></li><br>
-        <li><a href="#portfolio">Portfolio</a></li> <br>
-        <li><a href="#services">Services</a></li><br>
-        <li><a href="#blog">Blog</a></li><br>
+        <li><a href="#home" class="active">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#portfolio">Portfolio</a></li> 
+        <li><a href="#services">Services</a></li>
+        <li><a href="#blog">Blog</a></li>
         <li><a href="#contact">Contact Us</a></li>
     </ul>
+</div>
+</div>
+<br>
     <div id="test">
         <img src="wallpaper.jpg" width="100" alt="sample"> <br><a id="git"href="https://www.github.com//kirtan-anghan/" title="test">test</a>
         <p>some sample text </p>
@@ -31,8 +36,8 @@
         this is details<br>
         hello
 
-    </details>
-</div>
+    </details></div>
+    
 </body>
 
 </html>
