--- a/basic html/7.html
+++ b/basic html/7.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>menu</title>
     <link rel="stylesheet" href="style3.css">
+    <link rel="shortcut icon" href="Screen Shot 2022-05-10 at 5.50.28 PM.png" type="image/x-icon">
 </head>
 <body>
     <header class="heder">
