--- a/basic html/7.html
+++ b/basic html/7.html
@@ -15,7 +15,8 @@
         <li>home</li>
         <li>about</li>
         <li>etc</li>
-       </ul>
+        <li>content</li>
+    </ul>
     </div>
 </header>
     <p>
