--- a/basic html/12.html
+++ b/basic html/12.html
@@ -7,7 +7,7 @@
   <h1>Game Over!</h1>
   <a class="play-again" target="_parent" href="https://codepen.io/una/full/NxZaNr">Play Again</a>
 </div>
-
+<div>
 <ul class="game-area">
   <li><input type="checkbox"><div class="shield"></div></li>
   <li><input type="checkbox"><div class="shield"></div></li>
@@ -20,6 +20,7 @@
   <li><input type="checkbox"><div class="shield"></div></li>
 </ul>
 
+</div>
 <h3 class="total-count">Targets Hit: &nbsp;</h3>
 
 <small><a href="https://twitter.com/<una</una>">Made with love by @una &hearts;</a></small>
