js new code add

--- a/js/index.html
+++ b/js/index.html
@@ -21,6 +21,9 @@
         .text-success{
             color: white;
         }
+        body{
+            background-color: rgba(13, 194, 70, 0.987);
+        }
     </style>
 </head>
 <body>
