--- a/js/index.html
+++ b/js/index.html
@@ -35,6 +35,6 @@
     <div class="container">
         <p>This is a paragraph</p>
     </div> -->
-    <script src="script2.js"></script>
+    <script src="2.js"></script>
     </body>
 </html>
